2008-11-03  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.inline.hpp
	(BytecodeInterpreter::VMintShl): Only shift by the lower five bits.
	(BytecodeInterpreter::VMintShr): Likewise.
	(BytecodeInterpreter::VMintUshr): Likewise.

2008-10-31  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Fix potential DoS issue when dealing with very long
	URL/target addresses.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Decode param values
	correctly.
	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java: Bypass
	authentication check when origin matches.
	* rt/net/sourceforge/jnlp/security/AccessWarningPane.java: Show proper
	Name/Publisher/Origin values when no certificate is associated.


2008-10-31  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated for new visualvm 1.0.1.
	* patches/icedtea-visualvm.patch: Updated.

2008-10-29  Gary Benson  <gbenson@redhat.com>

	PR icedtea/238:
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::parse): Fix copy-and-paste error in f2l.

2008-10-27  Deepak Bhole  <dbhole@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java: Act on window
	close events (Bug# 215)

2008-10-27  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/234:
	* Makefile.am:
	Don't force the HotSpot release version
	to be the JDK release version so the HotSpot
	versioning is revealed.

2008-10-27  Lillian Angel  <langel@redhat.com>

	* configure.ac: Updated version to 1.4.

2008-10-27  Lillian Angel  <langel@redhat.com>

	* NEWS: Updated for 1.3.1 release.

2008-10-27  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Fix address pointer integer overflow on 64-bit
	systems.
	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java: Set cache
	dir to be local to each user (~/.icedteaplugin/cache).
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Apply patch from Tom
	Fitzsimmons for Bug# 230.

2008-10-27  Mark Wielaard  <mark@klomp.org>
